# hermes

./: .gitignore  Cargo.toml  LICENSE  README.md  guide.md
src/: lib.rs  main.rs
src/dns/: authority.rs  buffer.rs  cache.rs  client.rs  context.rs  mod.rs  netutil.rs  network.rs  protocol.rs  resolve.rs  server.rs  tcp.rs  udp.rs  web.rs
src/web/: authority.rs  cache.rs  index.rs  mod.rs  server.rs  util.rs
src/web/templates/: authority.html  cache.html  index.html  layout.html  zone.html
templates/: authority.html  cache.html  zone.html
